@@ -3,6 +3,7 @@
 - Switch SHA256 hashing to openssl
 - Add --check-status to fapolicyd-cli
 - If fapolicyd is already running, exit
+- Do trust db size check on all fapolicyd updates
 
 1.1.3
 - Replace snprintf integer to char conversion with uitoa function
